# angles

./: CMakeLists.txt  Makefile  README.md  REAME.md
cmake/: FindCompilerRuntime.cmake  FindCxxLibrary.cmake  FindGLFW3.cmake  FindWinPthread.cmake  utils.cmake  warnings.cmake
cmake/toolchains/: x86_64-w64-mingw32.cmake
gimp/: RPG_assets.xcf  floor-tiles.xcf  frames.xcf  text.xcf
src/: app.cpp  app.hpp  batch_data.cpp  batch_data.hpp  color.cpp  color.hpp  debug.hpp  draw.cpp  draw.hpp  exception.cpp  exception.hpp  iimg.cpp  iimg.hpp  img_characters.cpp  img_characters.hpp  img_floor.cpp  img_floor.hpp  img_frames.cpp  img_frames.hpp  img_text.cpp  img_text.hpp  keyboard.cpp  keyboard.hpp  main.cpp  mouse.cpp  mouse.hpp  output_record.cpp  output_record.hpp  point.cpp  point.hpp  res_keeper.cpp  res_keeper.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  sprite.cpp  sprite.hpp  spritesheet.cpp  spritesheet.hpp  (+16 more)
src/assets/: frames.hpp  rpg_characters.h  stone_floor.h  stone_floor.hpp  text.hpp
src/game/: ai.cpp  ai.hpp  cell.cpp  cell.hpp  field.cpp  field.hpp  game.cpp  game.hpp  line.cpp  line.hpp  search.cpp  search.hpp  searching_cell_record.cpp  searching_cell_record.hpp  state.cpp  state.hpp  step.cpp  step.hpp  vec2.cpp  vec2.hpp
